--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
                     ><i class="fa-solid fa-angle-down"></i
                   ></span>
                 </div>
-                <i class="fa-solid fa-bars sort-by-1"></i>
-                <i class="fa-solid fa-bars sort-by-2"></i>
+                <i class="fa-solid fa-bars" id="sort-by-1"></i>
+                <i class="fa-solid fa-bars" id="sort-by-2"></i>
               </div>
             </div>
             <div class="product-list" id="product-list">
